= Changelog

== Unreleased

* nope, tag does not trigger if we do that

== v1.1.43 - 2022-09-24 [[v1.1.43]]

* will skip ci help?

https://github.com/lread/muckabout/compare/v1.1.42\...v1.1.43[commit log]

== v1.1.42 - 2022-09-24 [[v1.1.42]]

* continue experiment

https://github.com/lread/muckabout/compare/v1.1.41\...v1.1.42[commit log]

== v1.1.41 - 2022-09-24 [[v1.1.41]]

* gha shared setup step experiments

https://github.com/lread/muckabout/compare/v1.1.40\...v1.1.41[commit log]

== v1.1.40 - 2022-09-24 [[v1.1.40]]

* matrix builds?

https://github.com/lread/muckabout/compare/v1.1.39\...v1.1.40[commit log]

== v1.1.39 - 2022-09-24 [[v1.1.39]]

* release desc update

https://github.com/lread/muckabout/compare/v1.1.38\...v1.1.39[commit log]

== v1.1.38 - 2022-09-24 [[v1.1.38]]

* project name

https://github.com/lread/muckabout/compare/v1.1.37\...v1.1.38[commit log]

== v1.1.37 - 2022-09-24 [[v1.1.37]]

* fix deploy cmd

https://github.com/lread/muckabout/compare/v1.1.36\...v1.1.37[commit log]

== v1.1.36 - 2022-09-24 [[v1.1.36]]

* neil, no you can't tag

https://github.com/lread/muckabout/compare/v1.1.35\...v1.1.36[commit log]

== v1.1.35 - 2022-09-24 [[v1.1.35]]

* fully qualify gh release

https://github.com/lread/muckabout/compare/v1.1.34\...v1.1.35[commit log]

== v1.1.32 - 2022-09-23 [[v1.1.32]]

* utc for changelog date

https://github.com/lread/muckabout/compare/Release-1.1.31\...Release-1.1.32[commit log]

== v1.1.31 - 2022-09-23 [[v1.1.31]]

* changes

https://github.com/lread/muckabout/compare/Release-1.1.30\...Release-1.1.31[commit log]

== v1.1.30 - 2022-09-23 [[v1.1.30]]

* oh me typos!

https://github.com/lread/muckabout/compare/Release-1.1.29\...Release-1.1.30[commit log]

== v1.1.29 - 2022-09-23 [[v1.1.29]]

* booboo fixed

https://github.com/lread/muckabout/compare/Release-1.1.28\...Release-1.1.29[commit log]

== v1.1.28 - 2022-09-23 [[v1.1.28]]

* missed some stuff
