@@ -2,7 +2,8 @@
 
 == Unreleased
 
-* nope, tag does not trigger if we do that
+* nope, tag does not trigger if skip ci
+* inform cljdoc of as part of release workflow
 
 == v1.1.43 - 2022-09-24 [[v1.1.43]]
 
